completed badger mart

--- a/badger-mart/about-us.html
+++ b/badger-mart/about-us.html
@@ -14,13 +14,20 @@
 				<a href="index.html">Home</a>
 				<a href="about-us.html">About Us</a>
 				<a href="order.html">Order</a>
+				<a href="jobs.html">Jobs</a>
 				<a href="contact.html">Contact</a>
 			</nav>
 		</header>
 		<main>
 			<div class="large-text-wrap">
-				<!-- TODO: Add some lorem ipsum! -->
-				
+				<h2> About Us </h2>
+				<p> <i>Lorem ipsum dolor sit amet</i>, consectetur adipiscing elit. <b>Proin aliquet risus nibh, at molestie quam blandit quis. </b>
+					Curabitur finibus metus non porta congue. Duis fermentum sapien at diam dapibus interdum. Nunc quis iaculis nisl. Suspendisse interdum rhoncus metus vel auctor. Nullam ut odio viverra, pellentesque urna at, fermentum orci. Maecenas in commodo sapien, sit amet imperdiet magna. Donec sed pellentesque libero, vitae varius mauris. Praesent imperdiet tellus a arcu ultrices, sed tempus ligula eleifend. Nam facilisis dui ut euismod congue. Ut sed orci feugiat, tempor nisi accumsan, vulputate elit. Maecenas feugiat sed sem ac tincidunt. Phasellus bibendum orci in diam commodo, ac imperdiet turpis eleifend. Aliquam sed tristique mauris. </p>
+				<h3>Nunc tellus mi</h3>
+				<p>lobortis ut venenatis dictum, <b>luctus ac odio</b>. Suspendisse non lorem vitae odio pulvinar aliquam vitae ut metus. Mauris at tempus magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis risus sit amet pharetra condimentum. Aliquam erat volutpat. Duis finibus viverra nisl. Sed ut elementum orci. Donec vel eros quis lacus gravida tempus. Curabitur aliquet ac lacus at efficitur. Morbi sit amet sodales risus. Phasellus porta felis in tristique ornare. Pellentesque luctus hendrerit eleifend.</p>
+				<h3>Praesent sapien augue</h3>
+				<p>https://www.lipsum.com/feed/html</p>
+				<img src="assets/bagel.png" alt="bagel" height="200" with="200"/>
 			</div>
 		</main>
 	</body>
