--- a/badger-mart/jobs.html
+++ b/badger-mart/jobs.html
@@ -17,6 +17,7 @@
 				<a href="index.html">Home</a>
 				<a href="about-us.html">About Us</a>
 				<a href="order.html">Order</a>
+				<a href="jobs.html">Jobs</a>
 				<a href="contact.html">Contact</a>
 			</nav>
 		</header>
@@ -48,8 +49,7 @@
 					</label>
 				</div>
 
-				<!-- TODO: Make this appear as a 'primary' button -->
-				<input type="submit" value="Apply">
+				<input type="submit" value="Apply" class="primary-button">
 			</form>
 		</main>
 	</body>
